# xombie

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build-backend.sh  db.sql  docker-compose.yml  nginx.conf  pgadmin-pgpass  pgadmin-servers.json
data/: Makefile
data/logo/: attribution.txt
data/motd/US/: English.txt  image.xbx
frontend/: Dockerfile  package-lock.json
libs/block-device/: Cargo.toml
libs/block-device/src/: file.rs  lib.rs  partition.rs  scsi.rs  usb.rs
libs/smoltcp-tun-tap/: Cargo.toml
libs/smoltcp-user-vpn/: Cargo.toml
libs/smoltcp-user-vpn/src/: device.rs  lib.rs  tcp.rs
libs/smoltcp-user-vpn/src/tcp/: http.rs
libs/xblive/: Cargo.toml
libs/xblive/src/: addr.rs  arith.rs  crypto.rs  dns.rs  krb.rs  lib.rs  net.rs  service.rs  sg.rs  time.rs  user.rs  ver.rs
libs/xblive/src/crypto/: derivation.rs  keys.rs  primitives.rs
libs/xblive/src/krb/: service.rs
libs/xblive/src/service/: matchmaking.rs  presence.rs
libs/xblive/src/sg/: control.rs  packet.rs  seq.rs  tcp.rs  udp.rs
libs/xbox-sys/: Cargo.toml
libs/xbox-sys/src/: account.rs  codec.rs  config.rs  config_area.rs  crypto.rs  eeprom.rs  fatx.rs  lib.rs  status.rs
libs/xbox-sys/src/crypto/: keys.rs
libs/xdvd/: Cargo.toml
libs/xdvd/src/: fs.rs  lib.rs  redump.rs
libs/xombie/: Cargo.toml
libs/xombie-matchmaking/: Cargo.toml
libs/xombie-matchmaking/src/: lib.rs
libs/xombie/src/: account.rs  db.rs  ip.rs  krb.rs  lib.rs  secrets.rs  sg.rs
scripts/: install_dissectors.sh  xblive_matchmaking_dissector.lua  xblive_presence_dissector.lua
services/api/: Cargo.toml  Dockerfile
services/api/src/: main.rs
services/faux-dns/: Cargo.toml  Dockerfile
services/faux-dns/src/: main.rs  packet.rs
services/kdc/: Cargo.toml  Dockerfile
services/kdc/src/: auth.rs  krb.rs  macs.rs  main.rs  ticket_granting.rs
services/sg/: Cargo.toml  Dockerfile
services/sg/src/: client.rs  init.rs  ip_conversion.rs  main.rs  open_clients.rs  secrets.rs  tracer.rs  user.rs
services/sg/src/client/: ctrl.rs  forward.rs  local.rs  send.rs  service.rs  tcp.rs
services/sg/src/client/service/: matchmaking.rs  presence.rs  terms_of_use.rs  unimplemented.rs
tools/: img-to-xpr.py
tools/config-area-tool/: Cargo.toml
tools/config-area-tool/src/: main.rs
tools/dvd-tool/: Cargo.toml
tools/dvd-tool/src/: main.rs
tools/get-machine-account/: Cargo.toml
tools/get-machine-account/src/: main.rs
tools/mem-card-tool/: Cargo.toml
tools/mem-card-tool/src/: main.rs
tools/mount-memory-card/: Cargo.toml
tools/mount-memory-card/src/: main.rs
tools/xbeeprom/: Cargo.toml
tools/xbeeprom/src/: main.rs
tools/xbltun/: Cargo.toml
