[package]
name = "faux-dns"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
nom = "^5.0"
tokio = { version = "1.12.0", features = ["full"] }
tokio-postgres = "0.7.3"
xblive = { path = "../../libs/xblive" }
xombie = { path = "../../libs/xombie" }
