[package]
name = "sg"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.3"
async-trait = "^0.1"
byteorder = "^1"
bytes = "^1"
chrono = "0.4.19"
clap = { version = "3.2.8", features = ["derive"] }
futures-util = "^0.3"
hex-literal = "0.3.1"
kerberos_asn1 = { path = "../../third_party/kerbeiros/kerberos_asn1" }
kerberos_constants = { path = "../../third_party/kerbeiros/kerberos_constants" }
log = { version = "0.4.4", default-features = false }
nom = "^7"
pcapng-writer = "0.1.0"
phf = { version = "0.10", features = ["macros"] }
rand = "0.7"
rust-crypto = "^0.2"
simple_logger = "^2"
smoltcp = "^0.8"
smoltcp-user-vpn = { path = "../../libs/smoltcp-user-vpn" }
tempfile = "^3"
tokio = { version = "1.12.0", features = ["full"] }
tokio-postgres = "0.7.3"
tokio-stream = "0.1.8"
tokio-util = { version = "^0.6", features = ["time"]}
xblive = { path = "../../libs/xblive" }
xbox-sys = { path = "../../libs/xbox-sys" }
xombie = { path = "../../libs/xombie" }
xombie-matchmaking = { path = "../../libs/xombie-matchmaking" }
