[package]
name = "config-area-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
hex = "0.4.3"
nom = "^7"
rand = "0.7"
xblive = { path = "../../libs/xblive" }
xbox-sys = { path = "../../libs/xbox-sys" }
xombie = { path = "../../libs/xombie" }
