[package]
name = "get-machine-account"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4.19"
clap = "~2.33"
kerberos_asn1 = { path = "../../third_party/kerbeiros/kerberos_asn1" }
kerberos_constants = { path = "../../third_party/kerbeiros/kerberos_constants" }
red_asn1 = { path = "../../third_party/red_asn1/red_asn1" }
tokio = { version = "1.12.0", features = ["full"] }
xblive = { path = "../../libs/xblive" }
