[package]
name = "mem-card-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
block-device = { path = "../../libs/block-device" }
clap = { version = "3.1.6", features = ["derive"] }
hex = "0.4"
rusb = "0.9.0"
xblive = { path = "../../libs/xblive" }
xbox-sys = { path = "../../libs/xbox-sys" }
xombie = { path = "../../libs/xombie" }
